fix: Relax CORS for uploads with wildcard origins and headers